# autolang

./: Cargo.toml  LICENSE
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/cli/src/cli/: command.rs  error.rs
crates/cli/tests/: cli_output.rs
crates/cli/tests/snapshots/: cli_output__help_prints_localized_help.snap  cli_output__invalid_subcommand_prints_localized_error.snap  cli_output__no_args_prints_localized_help.snap  cli_output__unknown_lsp_argument_uses_clap_subcommand_usage.snap  cli_output__unknown_root_argument_prints_localized_error_once.snap  cli_output__version_prints_package_version.snap
crates/lexer/: Cargo.toml
crates/lexer/src/: cursor.rs  lib.rs  tests.rs  tokens.rs
crates/lexer/src/snapshots/: lexer__tests__any_radix_0_to_z_but_invalid.snap  lexer__tests__any_radix_integer.snap  lexer__tests__any_radix_integer.snap.new  lexer__tests__empty_input.snap  (+22 more)
crates/locale/: Cargo.toml
crates/locale/src/: lang.rs  lib.rs  tr.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: lib.rs  server.rs  tests.rs
crates/parser/: Cargo.toml
crates/parser/src/: grammar.rs  infra.rs  lib.rs  tests.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: ast.rs  debug.rs  lang.rs  lib.rs  parse.rs  reparse.rs  tests.rs
editors/vscode/: .vscodeignore  language-configuration.json  package-lock.json  package.json  package.nls.json  package.nls.zh-cn.json
editors/vscode/l10n/: bundle.l10n.json  bundle.l10n.zh-cn.json
editors/vscode/src/: client.ts  config.ts  extension.ts  protocol.ts  reparseTrace.ts  syntaxTree.ts
(+121 files in other folders)
